--- a/css/salmos72.css
+++ b/css/salmos72.css
@@ -66,16 +66,17 @@ footer{
     }
     .informacion{
         width: 100%;
-        height: 70%
+        height: auto
     }
     .enlaces{
-        height: 30%;
+        height: auto;
         width: 100%;
     }
     footer{
         width: 100%;
         height: 50px;
     }
+     }
     @media (max-width: 600px) {
         nav{
             display:flex;
