--- a/css/proverbios/proverbios 9.1.css
+++ b/css/proverbios/proverbios 9.1.css
@@ -10,8 +10,9 @@ header{
     ;
 }
 header img{
-    width:100%;
+    width: 100%; 
     height: 500px;
+  
     
 }
 article{
@@ -42,7 +43,8 @@ article p{
    
 }
 article img{
-    width:100%;
+    margin: 0 5%;
+    width: 90%;
     height: 500px;
     
 }
