--- a/css/salmos72.css
+++ b/css/salmos72.css
@@ -61,12 +61,15 @@ footer{
         margin: 0 0;
     }
     h3{
-        font-size: 34px;
+        font-size: 30px;
         margin: 0 0;
     }
     .informacion{
         width: 100%;
         height: auto
+    }
+    .informacion h3{
+        font-size: 25px;
     }
     .enlaces{
         height: auto;
