--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,9 @@
   
 }
 body {
-  background: url('../img/fondo.jpeg');
-  background-size: cover;
+ /* background: url('../img/fondo.jpeg');
+  background-size: cover;*/
+  background-color: white;
 }
 nav{
     width: 100%;
@@ -145,7 +146,7 @@ a {
 .subtitulo h1{
     text-align: center;
     margin-top: 10px;
-    color: aliceblue;
+    color: black;
 }
 .recomendados {
   width: 100%;
